src/Components/Theming.css
@import url('https://fonts.googleapis.com/css2?family=Eudoxus+Sans:wght@400;700&family=Inter:wght@400;700&display=swap');

:root {
    --primary: #007bff;
    --secondary: #6c757d;
    --paragraph:#616B7E;
    --success: #28a745;
    --warning: #ffc107;
    --danger: #dc3545;
    --info:#17a2b8;
    --light: #f8f9fa;
    --dark:#343a40;
    --dull:#000;
    --main: "Eudoxus Sans, sans-serif";
    --basic:'Inter, sans-serif';
  }

